# ispy

./: .env.example  .gitignore  README.md
.devcontainer/: devcontainer.json
backend/: main.py  pyproject.toml  pytest.ini  run_server.py
backend/app/: main.py
backend/app/core/: config.py  jwt.py
backend/app/routes/: speech.py  users.py
backend/app/schema/: base.py
backend/app/services/: mongo.py  openai.py
backend/server/: app.py
backend/server/core/: config.py
backend/server/routes/: speech.py
backend/server/schema/: base.py
backend/server/services/: __init__.py  mongo.py  openai.py
backend/src/: main.py
backend/src/server/: app.py
backend/src/server/core/: config.py
backend/tests/server/test_services/: test_mongo.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  ProTip.js  index.js
scripts/: jwt.sh  populate_users.sh
