[tool.poetry]
name = "ispy-backend"
version = "0.1.0"
description = "FastAPI-backend for iSpy"
authors = ["Tony Kabilan Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.2.1"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
python-decouple = "^3.8"
openai = "^0.27.8"
motor = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-black = "^0.3.12"
pre-commit = "^3.3.3"
jupyter = "^1.0.0"

[tool.poetry.scripts]
ispy-server = "main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
